tests/snapshots/bundle__without_rules__bundle_without_rules_require_json_file_with_object.snap
---
source: tests/bundle.rs
expression: main
---
local __DARKLUA_BUNDLE_MODULES={}do __DARKLUA_BUNDLE_MODULES.a={value=true}end local value = __DARKLUA_BUNDLE_MODULES.a
