tests/snapshots/bundle__without_rules__bundle_without_rules_require_lua_file_after_declaration.snap
---
source: tests/bundle.rs
expression: main
---
local __DARKLUA_BUNDLE_MODULES = {}

do
    __DARKLUA_BUNDLE_MODULES.a = true
end

local const = 1
local value = __DARKLUA_BUNDLE_MODULES.a

