tests/snapshots/bundle__without_rules__bundle_without_rules_require_lua_file_forward_exported_type_functions.snap
---
source: tests/bundle.rs
expression: main
---
type function Nillable__DARKLUA_TYPE_a(ty)
    return types.unionof(ty, types.singleton(nil))
end

local __DARKLUA_BUNDLE_MODULES = {
    cache = {}::any,
}

do
    do
        local function __modImpl()
            return true
        end

        function __DARKLUA_BUNDLE_MODULES.a(): typeof(__modImpl())
            local v = __DARKLUA_BUNDLE_MODULES.cache.a

            if not v then
                v = {
                    c = __modImpl(),
                }
                __DARKLUA_BUNDLE_MODULES.cache.a = v
            end

            return v.c
        end
    end
end

local value = __DARKLUA_BUNDLE_MODULES.a()

export type Nillable<T> = Nillable__DARKLUA_TYPE_a<T>
