tests/snapshots/bundle__without_rules__bundle_without_rules_require_lua_file_forward_exported_types_with_generics.snap
---
source: tests/bundle.rs
expression: main
---
type Value__DARKLUA_TYPE_a<T> = string | T

local __DARKLUA_BUNDLE_MODULES

__DARKLUA_BUNDLE_MODULES = {
    cache = {},
    load = function(m)
        if not __DARKLUA_BUNDLE_MODULES.cache[m] then
            __DARKLUA_BUNDLE_MODULES.cache[m] = {
                c = __DARKLUA_BUNDLE_MODULES[m](),
            }
        end

        return __DARKLUA_BUNDLE_MODULES.cache[m].c
    end,
}

do
    function __DARKLUA_BUNDLE_MODULES.a()
        return true
    end
end

local value = __DARKLUA_BUNDLE_MODULES.load('a')

export type Value<T> = Value__DARKLUA_TYPE_a<T>
