tests/snapshots/bundle__without_rules__bundle_without_rules_require_lua_file_with_field_expression.snap
---
source: tests/bundle.rs
expression: main
---
local __DARKLUA_BUNDLE_MODULES={}do __DARKLUA_BUNDLE_MODULES.a={ value = 'oof' }end local value = __DARKLUA_BUNDLE_MODULES.a.value
