tests/snapshots/bundle__without_rules__bundle_without_rules_require_yaml_with_array.snap
---
source: tests/bundle.rs
expression: main
---
local __DARKLUA_BUNDLE_MODULES = {}

do
    __DARKLUA_BUNDLE_MODULES.a = {0, 100}
end

local value = __DARKLUA_BUNDLE_MODULES.a

