tests/snapshots/bundle__without_rules__require_lua_file_with_parser_error.snap
---
source: tests/bundle.rs
expression: "error_display.join(\"\\n\")"
---
error processing `src/main.lua` (bundler):
unable to parse `src/value.lua`: error occurred while creating ast: unexpected token `returnone`. (starting from line 1, character 1 and ending on line 1, character 10)
additional information: leftover token
